--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
         </div>
     </footer>
 
-    <script src="chat.js" defer></script>
-    <script src="app.js" defer></script>
+    <script src="chat.js?v=20260222b" defer></script>
+    <script src="app.js?v=20260222b" defer></script>
 </body>
 </html>
 
